# SolanaClient

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
client/: CMakeLists.txt  client.cpp  client.hpp
events/: CMakeLists.txt  event_handler.cpp  event_handler.hpp  scheduler.hpp
method/: CMakeLists.txt  constants.cpp  constants.hpp  get_base.cpp  get_base.hpp  get_methods.cpp  get_methods.hpp
stats/: CMakeLists.txt  stats.hpp
